--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Mario Cosplay Randomizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="./js/script.js" defer></script>
+            <script src="./js/audio.js" defer></script>
+        <script src="./js/script.js" defer></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -30,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+<div id="sound-button" class="sound-off"></div>
 
     <div class="banner">
         <img src="./img/banner-image.png" alt="Mario Cosplay Randomizer">
