--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <main>
         <p>Click on Player 1 and Enter your Preferred Name.</p>
-        <form>
-
-            <input type="text" placeholder="Player 1" name="player1" id="player1">
-
+        <form onSubmit="return false;">
+            <label for="player1"><p>Player 1</p>
+                <input type="text" placeholder="Player 1" name="player1" id="player1">
+            </label>
             <submit value="Start" id="submit">Start</submit>
 
         </form>
@@ -55,7 +55,7 @@
 
         <div id="marioModalWrapper"></div>
 
-        <a href="#" class="closeModal">Close</a>
+        <div class="closeModal">Close</div>
 
     </dialog>
     <div class="mcr-bg">
@@ -66,7 +66,7 @@
 
     </div>
     <footer>
-
+<p>Nintendo of America owns all licences to Mario, Super Mario, et al.<br><br>Mario Cosplay Randomizer is a coding project intended for entertainment purposes only.</p>
     </footer>
 
     <script>
